fix: badge mobile overflow

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -92,6 +92,10 @@ h1, h2, h3, h4, h5, h6 {
   right: -10px;
 }
 
+.ticket-now-fix .badge {
+    right: -9px;
+}
+
 .btn-primary {
     .button-variant(white; @brand-primary; @brand-primary);
     .heading-font;
